--- a/src/pages/change-password/change-password.scss
+++ b/src/pages/change-password/change-password.scss
@@ -1,4 +1,4 @@
-.user-edit-page {
+.change-password-page {
   display: flex;
   justify-content: center;
   width: 100%;
@@ -6,10 +6,11 @@
   hr {
     margin: 24px 0;
   }
+}
 
-  &__form {
-    margin: 50px 0 32px;
-  }
+.change-password {
+  width: 100%;
+  max-width: 510px;
 
   &__form-actions {
     margin-top: 32px;
