--- a/src/style.scss
+++ b/src/style.scss
@@ -1,7 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
 @import "typography";
 @import "utils";
+@import "variables";
 
 @import "./pages/login/login.page.scss";
 @import "./pages/signup/signup.page.scss";
@@ -14,12 +15,12 @@
   box-sizing: border-box;
 }
 :root {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: #263044;
+  color: var(--text-primary);
   background-color: #242424;
 
   font-synthesis: none;
@@ -38,9 +39,9 @@ body {
 
 hr {
   margin: 2px 0;
-  border-top: 1px solid #EAEAEA;
+  border-top: 1px solid var(--delimiter);
 
-  background-color: #EAEAEA;
+  background-color: var(--delimiter);
 }
 
 #app {
@@ -69,12 +70,6 @@ hr {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
 .button {
@@ -87,7 +82,7 @@ hr {
   line-height: 24px;
   font-weight: 500;
 
-  background-color: #519EF3;
+  background-color: var(--primary);
   border-radius: 4px;
 
   cursor: pointer;
@@ -99,30 +94,6 @@ hr {
   &:active {
     background-color: #1D77D8;
   }
-
-  &_link {
-    padding: 8px 4px;
-
-    color: #519EF3;
-
-    background-color: transparent;
-
-    &:hover {
-      color: #2E89EC;
-
-      background-color: transparent;
-    }
-
-    &:active {
-      color: #1D77D8;
-
-      background-color: transparent;
-    }
-
-    &:focus {
-      box-shadow: 0 0 3px 0 #519EF3;
-    }
-  }
 }
 
 .form-control {
@@ -132,6 +103,9 @@ hr {
 }
 
 .label {
+  display: inline-block;
+  margin-bottom: 4px;
+
   font-size: 13px;
   line-height: 18px;
 }
@@ -146,10 +120,38 @@ hr {
 
   border-radius: 4px;
 
-  &:disabled {
-    color: #868A95;
+  transition: all 0.2s ease-in-out;
 
-    background-color: #F4F4F4;
+  &:hover:not(:disabled) {
+    border-color: #2E89EC;
+
+    transition: all 0.2s ease-in-out;
+  }
+
+  &:focus:not(:disabled) {
+    border-color: #2E89EC;
+
+    transition: all 0.2s ease-in-out;
+  }
+
+  &:focus-visible:not(:disabled) {
+    border-color: #2E89EC;
+    outline: none;
+
+    transition: all 0.2s ease-in-out;
+  }
+
+  &:disabled {
+    color: var(--text-secondary);
+
+    background-color: var(--bg-color);
+  }
+
+  &::placeholder {
+    color: #868A95;
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 300;
   }
 }
 
