--- a/src/utils.scss
+++ b/src/utils.scss
@@ -21,3 +21,13 @@
 .text-left {
   text-align: left;
 }
+
+.text-alert {
+  color: var(--alert-color);
+}
+
+.grid-2-col {
+  display: grid;
+  grid-gap: 16px;
+  grid-template-columns: 1fr 1fr;
+}
